# ZK-Snarks-Demo

./: README.md  justfile
android/: local.properties
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: bridge_generated.dart  main.dart
macos/Runner/: bridge_generated.h
native/: Cargo.toml
native/src/: api.rs  bridge_generated.rs
native/src/api/: bit_iterator.rs  hasher.rs
