[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
rand = "0.4"
bellman_ce = { version = "=0.3.0", default-features = false }
sapling-crypto_ce = { version = "0.0.5", default-features = false }

[features]
default = ["multicore"]
multicore = ["bellman_ce/multicore", "sapling-crypto_ce/multicore"]